<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/advanced_search_options" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvOptions"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_alignLeft="@+id/tvOptions"
        android:text="@string/image_size" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageSize"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/color_filter" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColorFilter"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/image_type" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageType"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/site_filter" />

    <Spinner
        android:id="@+id/spinImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize" />

    <Spinner
        android:id="@+id/spinColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter" />

    <Spinner
        android:id="@+id/spinImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:layout_marginTop="20dp"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:onClick="onSave"
        android:text="@string/save" />

</RelativeLayout>
